Admins can create users

--- a/src/main/webapp/admin/admin-main.xhtml
+++ b/src/main/webapp/admin/admin-main.xhtml
@@ -8,6 +8,8 @@
     <h:body>
         <h1>View all users</h1>
         <h:link outcome="admin-showusers" value="Show Users" />
+        <h1>Create a user</h1>
+        <h:link outcome="admin-createuser" value="Create User"/>
         <br/>
         <p><h:link outcome="/index" value="To Home Page" /></p>
     </h:body>
