Can view a specific course
Code works for a specific course using native queries

--- a/src/main/webapp/users/viewcourses.xhtml
+++ b/src/main/webapp/users/viewcourses.xhtml
@@ -50,8 +50,8 @@
                             </p:row>
                             <p:row>
                                 <p:column colspan="2">
-                                    <p:dataList var="lecture" value="#{showCoursesJSFBean.courses}">
-                                        #{lecture.title}
+                                    <p:dataList var="lecture" value="#{showCoursesJSFBean.lecturesTitles}">
+                                        #{lecture}
                                     </p:dataList>
                                 </p:column>
                             </p:row>
