--- a/src/main/webapp/users/profile.xhtml
+++ b/src/main/webapp/users/profile.xhtml
@@ -26,7 +26,7 @@
             </ui:define>
 
             <ui:define name="content">
-                content
+                <p:button outcome="courses/javaee7.xhtml" value="JavaEE 7"/>
             </ui:define>
 
         </ui:composition>
