Showing some courses
JavaEE7 and Netbeans course show their lectures.

--- a/src/main/webapp/users/profile.xhtml
+++ b/src/main/webapp/users/profile.xhtml
@@ -27,6 +27,7 @@
 
             <ui:define name="content">
                 <p:button outcome="courses/javaee7.xhtml" value="JavaEE 7"/>
+                <p:button outcome="courses/netbeans.xhtml" value="Netbeans"/>
             </ui:define>
 
         </ui:composition>
