--- a/src/main/webapp/users/courses/javaee7.xhtml
+++ b/src/main/webapp/users/courses/javaee7.xhtml
@@ -14,7 +14,7 @@
         <ui:composition template="./../../resources/basicTemplate.xhtml">
 
             <ui:define name="top">
-                <h1>Let's learn some JavaEE 7!</h1>
+                <h1>Let's learn some JavaEE 7 #{javaEE7Course.username}!</h1>
             </ui:define>
 
             <ui:define name="left">
@@ -37,26 +37,13 @@
             </ui:define>
 
             <ui:define name="content">
-                <p:media value="http://www.youtube.com/v/09rHDabBQfA" width="420" height="315" player="flash"/>
-                <p:accordionPanel>
-                    <p:tab title="Lec1">
-                        <h1>Testament - More Than Meets the Eye</h1>
-                        <h3>Youtube Embed iFrame</h3>
-                        <!--<p:media value="http://www.youtube.com/v/KZnUr8lcqjo" width="420" height="315" player="flash"/>-->
-                        <!--<p:media value="http://www.youtube.com/v/R0dogNWjqw8" width="420" height="315" player="flash"/>-->
-                        <!--https://www.youtube.com/watch?v=R0dogNWjqw8-->
-                        
-                        <iframe width="560" height="315" src="//www.youtube.com/embed/R0dogNWjqw8" frameborder="0"></iframe>
-                        <h3>Primefaces Flash</h3>
-                        <p:media value="http://www.youtube.com/v/09rHDabBQfA" width="420" height="315" player="flash"/>
-                        <!--https://www.youtube.com/watch?v=09rHDabBQfA-->
+                <p:accordionPanel id="lectures" value="#{javaEE7Course.courseLectures}" var="lec">
+                    <p:tab title="#{lec.title}">
+                        <!--<iframe width="560" height="315" src="//www.youtube.com/embed/R0dogNWjqw8" frameborder="0"></iframe>-->
+                        <h:outputText value="this is static, this isn't: #{lec.youtube}"/>
+                        <p:button value="#{lec.material}"/>
+                        <p:button value="Take Test"/>
                     </p:tab>
-                    <p:tab title="Lec2">
-                    </p:tab>
-                    <p:tab title="Lec3"><h:outputText value="Hello"/></p:tab>
-                    <p:tab title="Lec4"><h:outputText value="Hello"/></p:tab>
-                    <p:tab title="Lec5"><h:outputText value="Hello"/></p:tab>
-
                 </p:accordionPanel>
             </ui:define>
 
