--- a/src/main/webapp/users/courses/netbeans.xhtml
+++ b/src/main/webapp/users/courses/netbeans.xhtml
@@ -6,7 +6,7 @@
       xmlns:p="http://primefaces.org/ui">
 
     <h:head>
-        <title>JavaEE 7</title>
+        <title>Netbeans</title>
     </h:head>
 
     <h:body>
@@ -14,7 +14,7 @@
         <ui:composition template="./../../resources/basicTemplate.xhtml">
 
             <ui:define name="top">
-                <h1>Let's learn some JavaEE 7 #{netbeansCourse.username}!</h1>
+                <h1>Let's learn some Netbeans 8 #{netbeansCourse.username}!</h1>
             </ui:define>
 
             <ui:define name="left">
