--- a/src/main/webapp/logout.xhtml
+++ b/src/main/webapp/logout.xhtml
@@ -7,6 +7,8 @@
     </h:head>
     <h:body>
         You've successfully logged out!
+        <br/>
+        <h:link value="Back to Index" outcome="/index.xhtml"/>
     </h:body>
 </html>
 
