--- a/src/main/webapp/users/profile.xhtml
+++ b/src/main/webapp/users/profile.xhtml
@@ -34,6 +34,7 @@
             </ui:define>
 
             <ui:define name="content">
+                <h2>Your purchased courses</h2>
                 <p:button outcome="courses/javaee7.xhtml" value="Java EE 7" rendered="#{profileController.javaee}"/>
                 <p:button outcome="courses/netbeans.xhtml" value="NetBeans 8" rendered="#{profileController.netbeans}"/>
                 <p:button outcome="courses/webservices.xhtml" value="Web Services" rendered="#{profileController.webservices}"/>
