Added proper menus
Menus done for root pages and users.

--- a/src/main/webapp/users/courses/java8.xhtml
+++ b/src/main/webapp/users/courses/java8.xhtml
@@ -19,15 +19,26 @@
             </ui:define>
 
             <ui:define name="left">
-                <p:button outcome="/index" value="Home Page" />
-                <br/>
-                <br/>
-                <p:button outcome="/users/main.xhtml" value="Users Main Area"/>
-                <br/>
-                <br/>
                 <h:form>
-                    <p:commandButton action="#{authenticationJSFBean.logout()}" value="Logout" />
+                    <p:menu style="width: 140px">
+                        <p:submenu label="Navigation">
+                            <p:menuitem value="Home Page" outcome="/index"/>
+                            <p:menuitem value="Users Main Area" outcome="/users/main"/>
+                        </p:submenu>
+                        <p:submenu label="Account">
+                            <p:menuitem value="My Profile" outcome="/users/profile"/>
+                            <p:menuitem value="Shopping Cart" outcome="/users/courseshowcart"/>
+                            <p:menuitem value="Logout" action="#{authenticationJSFBean.logout()}" ajax="false"/>
+                        </p:submenu>
+                        <p:submenu label="Contact">
+                            <p:menuitem value="Contact" outcome="/contact"/>
+                        </p:submenu>
+                        <p:submenu label="Admin">
+                            <p:menuitem value="Admin" outcome="/admin/admin-main"/>
+                        </p:submenu>
+                    </p:menu>
                 </h:form>
+                
             </ui:define>
 
             <ui:define name="right">
