--- a/src/main/webapp/contact.xhtml
+++ b/src/main/webapp/contact.xhtml
@@ -1,11 +1,12 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html">
 
-    <body>
+    <h:body>
 
-        <ui:composition template="/pfcontract.xhtml">
+        <ui:composition template="./resources/basicTemplate.xhtml">
 
             <ui:define name="top">
                 top
@@ -21,5 +22,5 @@
 
         </ui:composition>
 
-    </body>
+    </h:body>
 </html>
